tests/baselines/reference/exportSpecifierForAGlobal.errors.txt
b.ts(1,9): error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.
b.ts(3,5): error TS1184: Modifiers cannot appear here.


==== a.d.ts (0 errors) ====
    declare class X { }
    
==== b.ts (2 errors) ====
    export {X};
            ~
!!! error TS2661: Cannot export 'X'. Only local declarations can be exported from a module.
    export function f() {
        declare var x: X;
        ~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
        return x;
    } 
    